# remake-cavestory

./: .gitignore  CMakeLists.txt  LICENSE  README.md
content/maps/: Map 1 - 副本.tmx  Map1.tmx
head/: animatedsprite.h  anmitedsprite.h  game.h  global.h  graphics.h  input.h  level.h  player.h  sprite.h  tile.h
headers/: animatedsprite.h  animatedtile.h  fstools.h  globals.h  graphics.h  level.h  player.h  rectangle.h  slope.h  sprite.h  tile.h  utils.h
src/: animatedsprite.cpp  animatedtile.cpp  anmitedsprite.cpp  game.cpp  graphics.cpp  input.cpp  level.cpp  main.cpp  player.cpp  sprite.cpp  tile.cpp
